--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "@element-plus/icons-vue": "^2.0.6",
+    "element-plus": "^2.2.12",
+    "less": "^4.1.3",
+    "vue": "^3.2.37",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
+    "@types/node": "^18.6.5",
     "@vitejs/plugin-vue": "^3.0.0",
     "typescript": "^4.6.4",
+    "unplugin-auto-import": "^0.11.1",
+    "unplugin-vue-components": "^0.22.4",
     "vite": "^3.0.0",
     "vue-tsc": "^0.38.4"
   }
